--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,8 +5,7 @@ quarkus.datasource.password=orderpass
 quarkus.datasource.jdbc.url=jdbc:postgresql://localhost:5432/orderdb
 
 # Hibernate Configuration
-quarkus.hibernate-orm.database.generation=update
-quarkus.hibernate-orm.log.sql=true
+quarkus.hibernate-orm.schema-management.strategy=update
 
 # RabbitMQ Configuration
 rabbitmq-host=localhost
@@ -14,16 +13,26 @@ rabbitmq-port=5672
 rabbitmq-username=guest
 rabbitmq-password=guest
 
-# RabbitMQ Channels
-mp.messaging.outgoing.orders.connector=smallrye-rabbitmq
-mp.messaging.outgoing.orders.queue.name=orders
-mp.messaging.outgoing.orders.queue.durable=true
-mp.messaging.outgoing.orders.exchange.name=orders-exchange
-mp.messaging.outgoing.orders.exchange.type=direct
+# OUT ->
+mp.messaging.outgoing.orders-out.connector=smallrye-rabbitmq
+mp.messaging.outgoing.orders-out.exchange.name=orders-exchange
+mp.messaging.outgoing.orders-out.exchange.type=direct
+mp.messaging.outgoing.orders-out.exchange.durable=true
+mp.messaging.outgoing.orders-out.exchange.declare=true
+mp.messaging.outgoing.orders-out.routing-key=orders
+mp.messaging.outgoing.orders-out.default-routing-key=orders
 
-mp.messaging.incoming.orders.connector=smallrye-rabbitmq
-mp.messaging.incoming.orders.queue.name=orders
-mp.messaging.incoming.orders.queue.durable=true
+# IN <-
+mp.messaging.incoming.orders-in.connector=smallrye-rabbitmq
+mp.messaging.incoming.orders-in.queue.name=orders
+mp.messaging.incoming.orders-in.queue.durable=true
+mp.messaging.incoming.orders-in.queue.declare=true
+mp.messaging.incoming.orders-in.exchange.name=orders-exchange
+mp.messaging.incoming.orders-in.exchange.type=direct
+mp.messaging.incoming.orders-in.exchange.durable=true
+mp.messaging.incoming.orders-in.exchange.declare=true
+mp.messaging.incoming.orders-in.routing-keys=orders
+mp.messaging.incoming.orders-in.auto-bind=true
 
 # Metrics
 quarkus.micrometer.export.prometheus.enabled=true
