--- a/.dockerignore
+++ b/.dockerignore
@@ -1,5 +1,8 @@
-*
-!target/*-runner
-!target/*-runner.jar
-!target/lib/*
-!target/quarkus-app/*
+target/
+.mvn/
+.idea/
+*.iml
+.git/
+.gitignore
+README.md
+.dockerignore
